styles/globals.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: "Galano-Grotesque";
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: url("/fonts/Galano-Grotesque/GalanoGrotesque-Bold.woff2") format("woff2");
}

html {
  font-family: "Inter", sans-serif;

  h1,
  h2,
  h3 {
    font-family: "Galano-Grotesque", "Inter", sans-serif;
    font-weight: 700;
  }

  body {
    @apply bg-framed-black text-framed-white;

    .cls-1 {
      fill: #dbdfd8;
    }
  }
}

.calendar {
  g {
    rect {
      cursor: pointer;
    }
  }
}

.year-cover-container {
  container-type: inline-size;
}

// Main site style
h1, h2, h3, h4, h5, h6 {
	margin-top: 0;
	font-family: 'Galano Grotesque Alt', Arial, Helvetica, sans-serif;
	line-height: 100%;
}

body {
	font-weight: normal;
	min-height: 100%;
	overflow-x: hidden;
	margin: 0;
	-webkit-font-smoothing: antialiased;
	text-rendering: optimizeLegibility;
	-moz-osx-font-smoothing: grayscale;
	min-height: 100%;
	font-family: 'Galano Grotesque Alt (Numbers)', 'Atkinson Hyperlegible', 'Helvetica Neue', Helvetica, Arial, sans-serif;
	font-size: 16px;
}

